# attestation-sandbox

./: CMakeLists.txt  README.md  _config.yml  build_and_run_on_linux.sh  build_and_run_on_win.ps1  cygwin_build_and_run.sh  linux_build_and_run.sh  main.cpp  windows_build_and_run.ps1
maa-validate-jwt/: CMakeLists.txt  README.md  cygwin_build_and_run.sh  linux_build_and_run.sh  main.cpp  windows_build_and_run.ps1
maa-validate-jwt/include/: options.h
maa-validate-jwt/src/: main.cpp  options.cpp
